--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/cz-commitlint": "^16.1.0",
     "commitizen": "^4.2.4",
-    "husky": "^7.0.4"
+    "eslint": "^8.9.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1"
   },
   "config": {
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
+  },
+  "lint-staged": {
+    "**/*.js": ["prettier --write", "eslint --fix"]
   }
 }
